# jupiter-python-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  constants.py  functions.py  main.py  pyproject.toml  requirements.txt  shell.nix  tests.py
jupiter-python-cli/: functions.py  logging_settings.py  main.py
tests/: dca_account_data.json
