[tool.poetry]
name = "jupiter-python-cli"
version = "0.1.0"
description = ""
authors = ["arkptz <arkptz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
inquirerpy = "^0.3.4"
jupiter-python-sdk = "^0.0.2.0"
pyfiglet = "^1.0.2"
tabulate = "^0.9.0"
yaspin = "^3.0.1"
mypy = "^1.9.0"
pandas = "^2.2.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
